--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link" routerLinkActive="active" routerLink="/about" [ngStyle]="{ color: darkMode ? '#191c24' : 'var(--main-color)'}"></a>
 
       <!-- Logo Section -->
-      <div class="col-1 logomarg">
+      <div class="col-1">
         <div class="navbar-brand logo">
           <img [src]="logo" alt="Logo" routerLink="" />
         </div>
