--- a/front/src/app/component/footer/footer.component.html
+++ b/front/src/app/component/footer/footer.component.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
 
-            <div class="menus col-lg-3">
+            <div class="menus col-lg-3 col-md-4">
                 <!-- Recipes Menu -->
                 <div class="menu-column ">
                     <h1 class="heading">Recipes</h1>
@@ -30,7 +30,8 @@
                     </div>
                 </div>
             </div>
-            <div class="menus col-lg-3">
+            
+            <div class="menus col-lg-3 col-md-4">
                 <!-- About Menu -->
                 <div class="menu-column ">
                     <h1 class="heading">About</h1>
@@ -48,7 +49,7 @@
             </div>
 
             <!-- Footer Bottom Section -->
-            <div class="row footer-bottom mt-5 mb-5">
+            <div class="row footer-bottom mt-5 mb-5 mt-md-3">
                 <div class="col-lg-8 col-md-7 m-0 mt-4">
                     Copyright ©2024 All rights reserved | This template is made with 
                     <i class="fa-solid fa-heart color" ></i>
