--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -35,7 +35,7 @@
 </section>
 
 <!-- Top Dish Area Section -->
-<app-top-dish-area title="Where every dish tells a story."></app-top-dish-area>
+<app-top-dish-area title="Where every dish tells a story." id="categories"></app-top-dish-area>
 
 <!-- Categories Section -->
 <section class="categories mt-5">
