--- a/front/src/app/component/admin/admin.component.css
+++ b/front/src/app/component/admin/admin.component.css
@@ -1,3 +1,6 @@
+.container{
+    min-height: 80vh;
+}
 
 .sidebar{
     display: flex;
@@ -48,5 +51,10 @@
 
     .sections{
         padding: 0;
+    }
+}
+@media (max-width: 480px) {
+    .container{
+        min-height: 0;
     }
 }
