changed measurement unit label to units:

--- a/front/src/app/component/admin/admin-edit-pending-recipes/admin-edit-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-pending-recipes/admin-edit-pending-recipes.component.html
@@ -11,11 +11,7 @@
       </div>
 
       <div class="mb-2 col-lg-4">
-        <img
-          [src]="imageLink"
-          alt="Recipe Image"
-          class="img-thumbnail"
-        />
+        <img [src]="imageLink" alt="Recipe Image" class="img-thumbnail" />
       </div>
 
       <div class="col-lg-8 formEdit">
@@ -133,7 +129,7 @@
               </div>
 
               <div class="col-4">
-                <label for="measurementUnit">Measurement Unit:</label>
+                <label for="measurementUnit">Units:</label>
                 <input
                   type="text"
                   class="form-control"
