--- a/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
@@ -26,7 +26,7 @@
             formControlName="image"
             (change)="onFileSelected($event)"
           />
-        
+
           <div class="mb-3 mt-3">
             <label for="recipeName" class="form-label">Name:</label>
             <input
@@ -36,7 +36,7 @@
               formControlName="name"
             />
           </div>
-        
+
           <div class="mb-3">
             <label for="servings" class="form-label">servings:</label>
             <input
@@ -123,7 +123,7 @@
               </div>
 
               <div class="col-4">
-                <label for="measurementUnit">Measurement Unit:</label>
+                <label for="measurementUnit">Units:</label>
                 <input
                   type="text"
                   class="form-control"
