--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
@@ -266,16 +266,16 @@
 >
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <div class="modal-body">
-        <div class="text-center mb-4">
+      <div class="modal-body text-center">
+        <div class="mb-4">
           <i
             class="far fa-check-circle check-icon"
             style="color: var(--btn-color); font-size: 50px"
           ></i>
         </div>
         <div>
-          <span class="text-center" style="color: var(--footer-color)"
-            >Recipe added Successfully!!</span
+          <p style="color: var(--main-color);"
+            >Recipe added Successfully!!</p
           >
         </div>
       </div>
