--- a/front/src/app/component/not-found/not-found.component.html
+++ b/front/src/app/component/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 
-<div class="container text-center my-5"  style="min-height: 50vh;">
+<div class="container text-center my-5 d-flex flex-column justify-content-center align-items-center"  style="min-height: 80vh;">
     <img [src]="logo" alt="" class="w-50 me-4 mb-3 mb-md-0">
-    <h1>Whoops, That Page Can't Be Found!</h1>
-    <p>The page you're looking for is unavailable. Please try again by using our menu or search options above.</p>
+    <h1 style="color: var(--main-color);">Whoops, That Page Can't Be Found!</h1>
+    <p style="color: var(--second-color); font-weight: 500;">The page you're looking for is unavailable. Please try again by using our menu or search options above.</p>
 </div>
