--- a/front/src/app/component/payment/payment.component.html
+++ b/front/src/app/component/payment/payment.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5 d-flex flex-column align-items-center" style="min-height: 80vh;">
-  <app-top-dish-area title="Lets Get Premium!" style="margin-block:-60px;"></app-top-dish-area>
+  <app-top-dish-area title="Lets Get Premium!"></app-top-dish-area>
   <div class="content-wrapper my-5 d-flex gap-4 justify-content-center">
     <div class="premium-section py-4 px-5 bg-warning-subtle rounded">
       <div class="title border-bottom border-success">
