--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
@@ -13,7 +13,7 @@
         type="text"
         class="form-control"
         id="name-field"
-        placeholder="Name"
+        placeholder="ex: Chocolate Cake..."
         formControlName="name"
       />
       @if(recipeForm.controls['name'].invalid &&
@@ -30,7 +30,7 @@
         type="number"
         class="form-control"
         id="serving-field"
-        placeholder="Serving"
+        placeholder="Servings..."
         formControlName="Serving"
       />
       @if(recipeForm.controls['Serving'].invalid &&
@@ -47,7 +47,7 @@
         type="number"
         class="form-control"
         id="time-field"
-        placeholder="Enter time in minutes"
+        placeholder="Enter time in minutes..."
         formControlName="time"
       />
       @if(recipeForm.controls['time'].invalid &&
@@ -119,7 +119,7 @@
         type="text"
         class="form-control"
         id="category-field"
-        placeholder="category..."
+        placeholder="ex: Breakfast, Dinner, Launch, Dessert..."
         formControlName="category"
       />
       @if(recipeForm.controls['category'].invalid &&
@@ -161,7 +161,7 @@
             type="text"
             class="form-control"
             id="ingredientName"
-            placeholder="ingredient..."
+            placeholder="ex: flour, Olive Oil, shrimp..."
             formControlName="name"
           />
           @if(ingredient.get('name')?.invalid &&
@@ -180,10 +180,10 @@
         <div class="col-4">
           <label for="quantity">Quantity:</label>
           <input
-            type="text"
+            type="number"
             class="form-control"
             id="quantity"
-            placeholder="quantity..."
+            placeholder="ex: 3.."
             formControlName="quantity"
           />
           @if(ingredient.get('quantity')?.invalid &&
@@ -205,7 +205,7 @@
             type="text"
             class="form-control"
             id="measurementUnit"
-            placeholder="measurement unit..."
+            placeholder="ex: kg, gm, ltr, tbsp..."
             formControlName="measurement_unit"
           />
           @if(ingredient.get('measurement_unit')?.invalid &&
@@ -245,12 +245,13 @@
       <button
         type="submit"
         class="btn fw-bold text-capitalize text-light mt-4 px-4 py-2"
+        [disabled]="!recipeForm.valid"
       >
         add
       </button>
       <a
         routerLink="/admin"
-        class="btn btn-outline-dark fw-bold text-capitalize mt-4 ms-4 px-4 py-2"
+        class="btn btn-outline-danger fw-bold text-capitalize mt-4 ms-4 px-4 py-2"
         >cancel</a
       >
     </div>
