--- a/front/src/app/component/admin/admin-user/admin-user.component.css
+++ b/front/src/app/component/admin/admin-user/admin-user.component.css
@@ -16,3 +16,6 @@
 .dataTable td{
     font-size: 18px;
 }
+.p-datatable-table .p-datatable-tbody > tr {
+    background-color:#191c24 !important;
+}
