--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -28,7 +28,7 @@
     <div class="d-flex justify-content-center sm-div sub_category m-auto row">
         <div class="col-lg-2 col-md-3 col-sm-10  sm-div mt-2 ">
             <div class="dropdown d-flex flex-column" >
-                <button (click)="toggleDropdown()" class="btn pink-btn  d-block ">SubCategory 
+                <button (click)="toggleDropdown()" class="btn pink-btn  d-block darkbutton">SubCategory 
                     <img src="assets/imgs/filter-svgrepo-com.svg" alt="" class="d-inline-block" >
                     
                 </button>
